* /teama setowner <player> - Set the owner of the team (only avaliable if "singleOwner" is enabled in the config)
* /teama join <team> <player> - Force a player to join that team
* /teama leave <player> - Force a player to leave their team


Improvements:
Commands and cooldowns only activate if the command is successful
Added placeholder %betterteams_color% to use the team color
Improved help message if a command is invalid
Team color displays when the team name is being displayed below the players name
Command cost is now by default taken from the team balance (this can be changed in team.yml) 

Bug Fixes: 
Fixed a problem when placeholder API is not present on the server.	
Fixed a problem where a players team name was not removed when they left the team


3.1.1: 
Features: 
Added team warps with the commands 
/team warp <name> [password] - warp to the specified warp
/team warps - view a list of your teams warps
/team setwarp <name> [password] - Creates a new warp for your team
/team delwarp <name> [password] - Deletes a warp (owners do not need to know the password to do this

Added the following admin commands:
/teama warp <team> <warp> - Used to teleport to a teams warp, leave the warp blank to get a list of their warps 
/teama setwarp <team> <name> - Used to set a warp for that team
/teama delwarp <team> <name> - Used to delete a warp from that team

Bug Fixes: 
Fixed 2 bugs with updating messages.yml to the most recent version
Fixed a problem where players could use formatting codes in /team color

3.1.2
Features: 
Added integration with zKoth 

Improvements:
Improved BelowNameChangeEvent backend

Bug Fixes: 
Fixed a bug with formatted strings missing %s (https://github.com/booksaw/BetterTeams/issues/20)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
Update documentation on 
Make a page for the zkoth dependancy
make a page for the epic levels dependancy 


Headings: 
Features: 


Improvements:


Bug Fixes: 
