@@ -1,0 +1,38 @@
+package com.booksaw.betterTeams.customEvents;
+
+import org.bukkit.event.Cancellable;
+import org.bukkit.event.Event;
+import org.bukkit.event.HandlerList;
+
+/**
+ * This command is called just before a purge occurs
+ * 
+ * @author booksaw
+ *
+ */
+public class PrePurgeEvent extends Event implements Cancellable {
+
+	private static final HandlerList HANDLERS = new HandlerList();
+
+	public HandlerList getHandlers() {
+		return HANDLERS;
+	}
+
+	public static HandlerList getHandlerList() {
+		return HANDLERS;
+	}
+
+	private boolean cancelled = false;
+
+	@Override
+	public boolean isCancelled() {
+		return cancelled;
+	}
+
+	@Override
+	public void setCancelled(boolean b) {
+		cancelled = b;
+
+	}
+
+}
